--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     display: flex;
     justify-content: center;
     text-align: center;
-   background: url("/images (1).jpeg");
+   background: url("images (1).jpeg");
    background-size: cover;
    background-attachment: fixed;
 }.div{
